--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.40.2
-pandas==2.2.3
-numpy==2.1.3
-scikit-learn==1.5.2
-imblearn==0.12.3
-joblib==1.4.2
+streamlit
+pandas
+numpy
+scikit-learn
+imblearn
+joblib
