--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==1.40.2
-pandas==2.2.3
-numpy==2.1.3
+streamlit
+pandas
+numpy
 scikit-learn==1.0.2
 imblearn
 joblib==1.1.0
+setuptools
+distutils
