--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit
-pandas
-numpy
-scikit-learn
-matplotlib
-imbalanced-learn
+streamlit--1.40.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.2.2
 joblib
